<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".storytheisland.StoryTheIslandBeachActivity"
    style="@style/CardViewStyle"
    android:clipChildren="false"
    card_view:cardBackgroundColor="@color/colorLightPrimary"
    card_view:cardCornerRadius="@dimen/cardCornerRadius"
    card_view:contentPadding="@dimen/cardContentPadding">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/weather_data_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/weather_title_margin_bottom"
                android:elevation="@dimen/button_elevation"
                android:gravity="center_horizontal"
                android:text="@string/weather_data_title"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/body_text_size" />

            <EditText
                android:id="@+id/your_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/weather_data_title"
                android:layout_centerHorizontal="true"
                android:hint="@string/your_city"
                android:inputType="text"
                android:paddingBottom="@dimen/new_story_padding" />

            <Button
                android:id="@+id/button_check_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/weather_data_title"
                android:layout_marginStart="@dimen/button_margin_left"
                android:layout_toEndOf="@id/your_city"
                android:background="@color/colorAccent"
                android:padding="@dimen/button_padding"
                android:text="@string/button_check" />

            <TextView
                android:id="@+id/stories_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/your_city"
                android:padding="@dimen/new_story_padding"
                android:text="@string/available_stories"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/body_text_size" />

            <TextView
                android:id="@+id/new_story_first_story"
                style="@style/NewStory"
                android:layout_below="@id/stories_title"
                android:text="@string/the_island_story_title" />

            <TextView
                android:id="@+id/new_story_second_story"
                style="@style/NewStory"
                android:layout_below="@id/new_story_first_story"
                android:text="@string/the_future_story_title" />

        </RelativeLayout>
    </ScrollView>
</android.support.v7.widget.CardView>
