<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewStyle"
    card_view:cardCornerRadius="@dimen/cardCornerRadius"
    card_view:contentPadding="@dimen/cardContentPadding"
    card_view:cardBackgroundColor="@color/colorLightPrimary"
    android:clipChildren="false"
    tools:context=".storytheisland.EditTheIslandStoryActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/story_edit_story_the_island_instructions"
                style="@style/StorySoFarTextView"
                android:text="@string/edit_story_the_island_instructions"
                android:layout_marginBottom="@dimen/extra_margin_bottom"/>

            <EditText
                android:id="@+id/edit_text_story_the_island"
                android:layout_below="@id/story_edit_story_the_island_instructions"
                style="@style/FinalStoryEditText"
                android:hint="@string/answer_hint_to_question"
                android:inputType="textMultiLine"/>

            <Button
                android:id="@+id/button_edit_story_the_island"
                style="@style/BottomButtonStyle"
                android:layout_below="@id/edit_text_story_the_island"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/button_go_to_submission_screen" />
        </RelativeLayout>
    </ScrollView>
</android.support.v7.widget.CardView>