<?xml version="1.0" encoding="utf-8"?><!-- This linear layout contains a single item displayed in the MainActivity -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/recyclerview_padding"
    android:elevation="@dimen/cardElevation"
    card_view:cardCornerRadius="@dimen/cardCornerRadius"
    card_view:contentPadding="@dimen/cardContentPadding"
    card_view:cardBackgroundColor="@color/colorLightPrimary">

<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.lucian.mystoryteller.MainActivity">

    <TextView
        android:id="@+id/recycler_view_content_title"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/recyclerview_content_padding"
        android:textColor="@android:color/primary_text_light"
        tools:text="@string/recyclerview_content_title" />

    <TextView
        android:id="@+id/recyclerview_content_date"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recycler_view_content_title"
        android:gravity="center"
        android:paddingBottom="@dimen/recyclerview_content_padding"
        android:textColor="@android:color/primary_text_light"
        tools:text="@string/recyclerview_content_date" />

    <TextView
        android:id="@+id/recyclerview_content_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_below="@id/recyclerview_content_date"
        android:gravity="center"
        android:paddingBottom="@dimen/recyclerview_content_padding"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        tools:text="@string/recyclerview_content_userName" />
</RelativeLayout>
</android.support.v7.widget.CardView>


